# searchforge

./: .gitignore  README.md  README_PYPI.md  pyproject.toml  requirements-dev.txt  sample.txt  searchforge.json  searchforge_analytics.json  searchforge_index.json
.github/workflows/: ci.yml  lint.yml  publish.yml
examples/: basic_search.py
src/searchforge/: __init__.py  analytics.py  analytics_storage.py  cli.py  document.py  engine.py  fuzzy.py  highlight.py  index.py  index_storage.py  normalizer.py  query.py  ranking.py  results.py  stopwords.py  storage.py  suggest.py  tokenizer.py
tests/: test_analytics.py  test_analytics_storage.py  test_engine.py  test_fuzzy.py  test_highlight.py  test_index.py  test_index_storage.py  test_normalizer.py  test_query.py  test_ranking.py  test_stopwords.py  test_storage.py  test_suggest.py  test_tokenizer.py
