[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "searchforge"
version = "0.1.0"
description = "A lightweight search engine for Python applications"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Ravi Singh Kalakoti"}
]


[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
searchforge = "searchforge.cli:main"